solve conflict